// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/CellAxis Basic 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th
        className="pb-0"
        css={
          Object {
            "verticalAlign": "bottom !important",
          }
        }
      >
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <line
              role="presentation"
              shapeRendering="auto"
              style={
                Object {
                  "fill": "transparent",
                  "stroke": "transparent",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 1,
                }
              }
              vectorEffect="non-scaling-stroke"
              x1={10}
              x2={106}
              y1={19}
              y2={19}
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "transparent",
                    "size": 5,
                    "stroke": "gray",
                  }
                }
                vectorEffect="non-scaling-stroke"
                x1={10}
                x2={10}
                y1={19}
                y2={14}
              />
              <text
                direction="inherit"
                dx={0}
                id="axis-tickLabels-0"
                x={10}
                y={12.405}
              >
                <tspan
                  dx={0}
                  dy={0}
                  style={
                    Object {
                      "fill": "grey",
                      "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
                      "fontSize": 11,
                      "letterSpacing": "normal",
                      "padding": 0,
                      "stroke": "transparent",
                    }
                  }
                  textAnchor="middle"
                  x={10}
                >
                  0%
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "transparent",
                    "size": 5,
                    "stroke": "gray",
                  }
                }
                vectorEffect="non-scaling-stroke"
                x1={58}
                x2={58}
                y1={19}
                y2={14}
              />
              <text
                direction="inherit"
                dx={0}
                id="axis-tickLabels-1"
                x={58}
                y={12.405}
              >
                <tspan
                  dx={0}
                  dy={0}
                  style={
                    Object {
                      "fill": "grey",
                      "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
                      "fontSize": 11,
                      "letterSpacing": "normal",
                      "padding": 0,
                      "stroke": "transparent",
                    }
                  }
                  textAnchor="middle"
                  x={58}
                >
                  50%
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "transparent",
                    "size": 5,
                    "stroke": "gray",
                  }
                }
                vectorEffect="non-scaling-stroke"
                x1={106}
                x2={106}
                y1={19}
                y2={14}
              />
              <text
                direction="inherit"
                dx={0}
                id="axis-tickLabels-2"
                x={106}
                y={12.405}
              >
                <tspan
                  dx={0}
                  dy={0}
                  style={
                    Object {
                      "fill": "grey",
                      "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
                      "fontSize": 11,
                      "letterSpacing": "normal",
                      "padding": 0,
                      "stroke": "transparent",
                    }
                  }
                  textAnchor="middle"
                  x={106}
                >
                  100%
                </tspan>
              </text>
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </th>
      <th>
        test
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        test
      </td>
      <td>
        test
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Example/CellBar Basic 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        value
      </th>
      <th>
        bar
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        0
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 10, 14 
A 0 0 0 0 1, 10, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 233, 197)",
                    "padding": 8,
                    "stroke": "rgb(255, 233, 197)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.1
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 19.6, 6 
A 0 0 0 0 1, 19.6, 6 
L 19.6, 14 
A 0 0 0 0 1, 19.6, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 233, 197)",
                    "padding": 8,
                    "stroke": "rgb(255, 233, 197)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.2
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 29.200000000000003, 6 
A 0 0 0 0 1, 29.200000000000003, 6 
L 29.200000000000003, 14 
A 0 0 0 0 1, 29.200000000000003, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 233, 197)",
                    "padding": 8,
                    "stroke": "rgb(255, 233, 197)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.30000000000000004
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 38.800000000000004, 6 
A 0 0 0 0 1, 38.800000000000004, 6 
L 38.800000000000004, 14 
A 0 0 0 0 1, 38.800000000000004, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 212, 138)",
                    "padding": 8,
                    "stroke": "rgb(255, 212, 138)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.4
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 48.400000000000006, 6 
A 0 0 0 0 1, 48.400000000000006, 6 
L 48.400000000000006, 14 
A 0 0 0 0 1, 48.400000000000006, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 212, 138)",
                    "padding": 8,
                    "stroke": "rgb(255, 212, 138)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.5
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 58, 6 
A 0 0 0 0 1, 58, 6 
L 58, 14 
A 0 0 0 0 1, 58, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 190, 80)",
                    "padding": 8,
                    "stroke": "rgb(255, 190, 80)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.6000000000000001
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 67.60000000000001, 6 
A 0 0 0 0 1, 67.60000000000001, 6 
L 67.60000000000001, 14 
A 0 0 0 0 1, 67.60000000000001, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 190, 80)",
                    "padding": 8,
                    "stroke": "rgb(255, 190, 80)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.7000000000000001
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 77.2, 6 
A 0 0 0 0 1, 77.2, 6 
L 77.2, 14 
A 0 0 0 0 1, 77.2, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 190, 80)",
                    "padding": 8,
                    "stroke": "rgb(255, 190, 80)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.8
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 86.80000000000001, 6 
A 0 0 0 0 1, 86.80000000000001, 6 
L 86.80000000000001, 14 
A 0 0 0 0 1, 86.80000000000001, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 168, 21)",
                    "padding": 8,
                    "stroke": "rgb(255, 168, 21)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        0.9
      </td>
      <td>
        <div
          className="VictoryContainer"
          style={
            Object {
              "height": 20,
              "pointerEvents": "none",
              "position": "relative",
              "touchAction": "none",
              "width": 120,
            }
          }
        >
          <svg
            height={20}
            role="img"
            style={
              Object {
                "height": 20,
                "pointerEvents": "all",
                "width": 120,
              }
            }
            width={120}
          >
            <g
              role="presentation"
            >
              <path
                d="M 10, 14 
A 0 0 0 0 1, 10, 14 
L 10, 6 
A 0 0 0 0 1, 10, 6 
L 96.4, 6 
A 0 0 0 0 1, 96.4, 6 
L 96.4, 14 
A 0 0 0 0 1, 96.4, 14 
 z"
                role="presentation"
                shapeRendering="auto"
                style={
                  Object {
                    "fill": "rgb(255, 168, 21)",
                    "padding": 8,
                    "stroke": "rgb(255, 168, 21)",
                    "strokeWidth": 0,
                  }
                }
              />
            </g>
          </svg>
          <div
            style={
              Object {
                "height": 20,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": 120,
                "zIndex": 99,
              }
            }
          >
            <svg
              height={20}
              style={
                Object {
                  "height": 20,
                  "overflow": "visible",
                  "width": 120,
                }
              }
              width={120}
            />
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;
